--- a/src/main/java/graphics/fxml/AdminMangeProducts.fxml
+++ b/src/main/java/graphics/fxml/AdminMangeProducts.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import java.net.URL?>
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.AdminMangeProducts">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.AdminMangeProducts">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -18,17 +16,17 @@
     </stylesheets>
     <children>
         <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#back" text="back" />
-        <TableView fx:id="productTable" layoutX="86.0" prefHeight="524.0" prefWidth="514.0">
+        <TableView fx:id="productTable" layoutX="64.0" prefHeight="524.0" prefWidth="536.0">
             <columns>
                 <TableColumn fx:id="nameColumn" prefWidth="75.0" text="ProductId" />
                 <TableColumn fx:id="imageColumn" prefWidth="76.0" text="Image" />
-                <TableColumn fx:id="categoryColumn" prefWidth="70.0" text="Category" />
-                <TableColumn fx:id="priceColumn" prefWidth="56.0" text="Price" />
-                <TableColumn fx:id="averageRateColumn" prefWidth="88.0" text="Average rate" />
-                <TableColumn fx:id="sellerColumn" prefWidth="56.0" text="Seller" />
-                <TableColumn fx:id="buttonColumn" prefWidth="72.0" text="View More" />
+                <TableColumn fx:id="categoryColumn" prefWidth="77.40003967285156" text="Category" />
+                <TableColumn fx:id="priceColumn" prefWidth="56.20001220703125" text="Price" />
+                <TableColumn fx:id="averageRateColumn" prefWidth="81.0" text="Average rate" />
+                <TableColumn fx:id="sellerColumn" prefWidth="71.0" text="Seller" />
+                <TableColumn fx:id="buttonColumn" prefWidth="98.5999755859375" text="View More" />
             </columns>
         </TableView>
-        <Button onAction="#removeProduct" layoutX="270.0" layoutY="533.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="130.0" text="Remove Product" />
+        <Button layoutX="227.0" layoutY="518.0" mnemonicParsing="false" onAction="#removeProduct" prefHeight="60.0" prefWidth="168.0" text="Remove Product" />
     </children>
 </AnchorPane>
