--- a/src/main/java/graphics/fxml/AllOffsMenu.fxml
+++ b/src/main/java/graphics/fxml/AllOffsMenu.fxml
@@ -25,22 +25,22 @@
         <TextField fx:id="nameTextField" layoutX="109.0" layoutY="124.0" prefHeight="38.0" prefWidth="106.0" />
         <Label alignment="CENTER" layoutX="13.0" layoutY="168.0" prefHeight="32.0" prefWidth="76.0" text="Category" />
         <ChoiceBox fx:id="categoryChoiceBox" layoutX="99.0" layoutY="168.0" prefHeight="32.0" prefWidth="135.0" />
-        <CheckBox fx:id="priceCheckBox" layoutX="15.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
+        <CheckBox fx:id="priceCheckBox" layoutX="2.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Price" />
         <Button layoutX="138.0" layoutY="214.0" mnemonicParsing="false" onAction="#disableFilter" prefHeight="32.0" prefWidth="106.0" text="Disable Filter" />
-        <CheckBox fx:id="averageRateCheckBox" layoutX="146.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
+        <CheckBox fx:id="averageRateCheckBox" layoutX="123.0" layoutY="279.0" mnemonicParsing="false" text="Sort By Average Rate" />
         <Button layoutX="14.0" layoutY="321.0" mnemonicParsing="false" onAction="#performSort" prefHeight="32.0" prefWidth="106.0" text="Sort" />
         <Button layoutX="138.0" layoutY="321.0" mnemonicParsing="false" onAction="#disableSort" prefHeight="32.0" prefWidth="106.0" text="Disable Sort" />
-        <TableView fx:id="productTable" layoutX="304.0" prefHeight="600.0" prefWidth="724.0">
+        <TableView fx:id="productTable" layoutX="285.0" prefHeight="600.0" prefWidth="743.0">
             <columns>
-                <TableColumn fx:id="nameColumn" prefWidth="75.0" text="ProductId" />
-                <TableColumn fx:id="imageColumn" prefWidth="76.0" text="Image" />
-                <TableColumn fx:id="priceColumn" prefWidth="79.0" text="Initial Price" />
-                <TableColumn fx:id="averageRateColumn" prefWidth="91.0" text="Average Rate" />
-                <TableColumn fx:id="salePercentColumn" text="Off Percent" />
-                <TableColumn fx:id="beginDateColumn" prefWidth="89.0" text="Begin Date" />
-                <TableColumn fx:id="endDateColumn" prefWidth="88.0" text="End Date" />
-                <TableColumn fx:id="timeLeftColumn" prefWidth="68.0" text="Time Left" />
-                <TableColumn fx:id="buttonColumn" prefWidth="77.0" text="View More" />
+                <TableColumn fx:id="nameColumn" prefWidth="66.20001220703125" text="ProductId" />
+                <TableColumn fx:id="imageColumn" prefWidth="85.0" text="Image" />
+                <TableColumn fx:id="priceColumn" prefWidth="68.19998168945312" text="Initial Price" />
+                <TableColumn fx:id="averageRateColumn" prefWidth="92.60006713867188" text="Average Rate" />
+                <TableColumn fx:id="salePercentColumn" prefWidth="83.5999755859375" text="Off Percent" />
+                <TableColumn fx:id="beginDateColumn" prefWidth="102.79998779296875" text="Begin Date" />
+                <TableColumn fx:id="endDateColumn" prefWidth="92.4000244140625" text="End Date" />
+                <TableColumn fx:id="timeLeftColumn" prefWidth="74.0" text="Time Left" />
+                <TableColumn fx:id="buttonColumn" text="View More" />
             </columns>
         </TableView>
       <Button layoutX="24.0" layoutY="540.0" mnemonicParsing="false" onAction="#goToMyAccount" prefHeight="38.0" prefWidth="100.0" text="My Account" />
