--- a/src/main/java/graphics/fxml/CartMenu.fxml
+++ b/src/main/java/graphics/fxml/CartMenu.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<?import java.net.URL?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="graphics.CartMenu">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="graphics.CartMenu">
     <stylesheets>
         <URL value="@cssSheets/BasicStyle.css" />
     </stylesheets>
@@ -36,6 +28,7 @@
                         <Button layoutX="87.0" layoutY="123.0" mnemonicParsing="false" onAction="#decreaseProduct" prefHeight="35.0" prefWidth="75.0" text="-" />
                         <TextField fx:id="productTextField" layoutX="4.0" layoutY="48.0" prefHeight="42.0" prefWidth="167.0" />
                         <Label layoutX="8.0" layoutY="14.0" prefHeight="24.0" prefWidth="125.0" text="Product Id" />
+                  <Button layoutX="10.0" layoutY="514.0" mnemonicParsing="false" onAction="#goToMyAccount" prefHeight="44.0" prefWidth="156.0" text="My Account" />
                     </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="416.0">
