--- a/src/main/java/graphics/fxml/ThisSellerSellLogs.fxml
+++ b/src/main/java/graphics/fxml/ThisSellerSellLogs.fxml
@@ -22,10 +22,10 @@
                     <children>
                         <TableView fx:id="tableView" layoutX="81.0" layoutY="72.0" prefHeight="352.0" prefWidth="448.0">
                             <columns>
-                                <TableColumn fx:id="buyLogCode" prefWidth="86.80001831054688" text="Code" />
-                                <TableColumn fx:id="dateColumn" prefWidth="116.20002746582031" text="Date" />
-                                <TableColumn fx:id="totalPriceColumn" prefWidth="119.0" text="Recieved Money" />
-                                <TableColumn fx:id="amountOfDiscountColumn" prefWidth="124.0" text="Amount of Sale" />
+                                <TableColumn fx:id="sellLogCode" prefWidth="53.20001220703125" text="Code" />
+                                <TableColumn fx:id="dateColumn" prefWidth="150.800048828125" text="Date" />
+                                <TableColumn fx:id="receivedMoney" prefWidth="119.0" text="Recieved Money" />
+                                <TableColumn fx:id="amountOfSale" prefWidth="124.0" text="Amount of Sale" />
                             </columns>
                         </TableView>
                         <Label alignment="CENTER" layoutX="218.0" layoutY="23.0" prefHeight="40.0" prefWidth="144.0" text="All Sell Logs">
